fix: correção do letter-spacing

--- a/src/helpers/typography/src/body.css
+++ b/src/helpers/typography/src/body.css
@@ -5,6 +5,6 @@ body {
     font-weight: var(--font-weight-normal);
     font-size: var(--font-size-default);
     line-height: var(--line-height-md);
-    letter-spacing: var(--letter-spacing-1);
+    letter-spacing: var(--letter-spacing-auto);
     text-align: left;
 }
